ikiwiki (2.55) UNRELEASED; urgency=low

  * remove: New plugin that adds the ability to remove pages via the web.
    (Sponsored by The TOVA Company.)
  * rename: New plugin that adds the ability to rename pages via the web.
    (Sponsored by The TOVA Company.) (This one's for you, Kyle.)
  * All rcs backends need to implement rcs_remove, rcs_commitstaged,
    and rcs_rename. (Done for svn, git).
  * prefix_directives enabled in doc wiki, all preprocessor directives
    converted. (Simon McVittie)
  * editpage: Don't show attachments link when attachments are disabled.
  * tag: Allow tagbase to be overridden by starting a tag with "./" or "/".
    (Simon McVittie)
  * Really fix bug with links to pages with names containing colons. 
    Previous fix mised a few cases.
  * Avoid troublesome abs_path calls in wrapper setup.
  * Add allow_symlinks_before_srcdir config setting that can be used to avoid
    a security check that is a good safe default, but problimatic overkill in
    some situations.
  * Don't allow uploading an attachment with the same name as an existing
    page, to avoid confusion.
  * Split out error messages from editpage.tmpl into several separate
    templates.
  * attachment: Do not escape _ when determining attachment filenames.
  * Rebuild pages that change their type. (Gabriel McManus)

 -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400

ikiwiki (2.54) unstable; urgency=low

  [ Joey Hess ]
  * Make it possible to load setup files w/o running them. Code
    needing to do so can call IkiWiki::Setup::load, which will return
    a hash of values.

  [ Josh Triplett ]
  * ikiwiki-transition: Fix command-line processing so the prefix_directives
    transition works again.

  [ Joey Hess ]
  * template: Add support for a BASENAME variable.
  * Fixes creation of pages when clicking on WikiLinks starting with "/".
  * Change deb dependencies to list Text::Markdown before markdown, since