@@ -6,6 +6,8 @@ ikiwiki (2.55) UNRELEASED; urgency=low
     (Sponsored by The TOVA Company.) (This one's for you, Kyle.)
   * All rcs backends need to implement rcs_remove, rcs_commitstaged,
     and rcs_rename. (Done for svn, git).
+  * This version adds renamepage hooks, which can be used to modify page content,
+    including links, during renames.
   * prefix_directives enabled in doc wiki, all preprocessor directives
     converted. (Simon McVittie)
   * editpage: Don't show attachments link when attachments are disabled.
